@@ -1,6 +1,8 @@
 since version 2.1.4 release
 ===========================
 * add __dir__ method so dir(grb) returns grib keys.
+* allow pygrib.open() to open the path specified by the pathlib.Path object
+  (issue #193, PR #204)
 
 version 2.1.4 (git tag v2.1.4rel)
 ================================
